@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.15 2006/01/06 15:10:05 wiz Exp $
+# $NetBSD: Makefile,v 1.16 2006/01/07 10:27:51 hubertf Exp $
 
-DISTNAME=	spamprobe-1.2a
-PKGREVISION=	1
+DISTNAME=	spamprobe-1.4
 CATEGORIES=	mail
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=spamprobe/}
 
